<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- Title (optional if set in Builder) -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/dcadm_dialog_configure_drive_title"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/dcadm_dialog_configure_drive_desc" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/dcadm_btn_cancel" />

        <Button
            android:id="@+id/btnConfigure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dcadm_dialog_configure_drive_btn_configure"
            android:textAllCaps="false"
            android:layout_marginStart="8dp" />

    </LinearLayout>
</LinearLayout>
